commit swagger and format changes
